--- a/styles.css
+++ b/styles.css
@@ -777,3 +777,9 @@
     height: 2rem;
     border-radius: 100%;
 }
+
+.competvet-view-todos .userpicture {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+}
